--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "core-js": "^3.8.3",
+    "express": "^4.21.2",
+    "prisma": "^6.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
