--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "express": "^4.21.2",
     "prisma": "^6.1.0",
